[package]
name = "procedural-generation"
version = "0.1.4"
authors = ["Knarkzel <knarkzel@cock.li>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Procedurally generate maps elegantly"
repository = "https://gitlab.com/knarkzel/procedural-generation" 
documentation = "https://docs.rs/procedural-generation/"
keywords = ["procedural", "generation", "maps", "easy"]
categories = ["game-development"]

[dependencies]
rand = "0.7.3"
owo-colors = "1.1.3"
