[package]
name = "procedural-generation"
version = "0.3.0"
authors = ["Knarkzel <knarkzel@cock.li>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Procedurally generate maps elegantly"
repository = "https://gitlab.com/knarkzel/procedural-generation" 
documentation = "https://docs.rs/procedural-generation/"
keywords = ["procedural", "generation", "maps", "easy"]
categories = ["game-development"]

[dependencies]
rand = "0.7.3"
owo-colors = "1.1.3"
smart-default = "0.6.0"
rayon = "1.4.1"

[dependencies.noise]
version = "0.6.0"
default-features = false

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "spawn"
harness = false
