[package]
name = "procedural-generation"
version = "0.3.1"
authors = ["Knarkzel <knarkzel@cock.li>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Procedurally generate maps elegantly"
repository = "https://gitlab.com/knarkzel/procedural-generation"
documentation = "https://docs.rs/procedural-generation/"
keywords = ["procedural", "generation", "maps", "easy"]
categories = ["game-development"]

[dependencies]
rand = "0.8"
owo-colors = { version = "3", optional = true }
smart-default = "0.7"
rayon = "1"

[dependencies.noise]
version = "0.8.0"
default-features = false

[dev-dependencies]
criterion = "0.5"

[features]
default = ["colors"]
colors = ["owo-colors"]

[[bench]]
name = "spawn"
harness = false
